fixed text alignment

--- a/css/components/nav.styl
+++ b/css/components/nav.styl
@@ -47,17 +47,18 @@ $nav-height-short = 45px
   .nav-main
     height: $nav-height-tall
     font-size: 15px
-    text-align: center
 
     .nav-home
       height: 40px
       padding: 10px
+      text-align: center
 
     .nav-links
 
       label, & > a
         height: 40px
         padding: 10px
+        text-align: center
 
       label
         width: 38%
